# HW-todo-api

./: .gitignore  Hello.py  README.md  README.txt  app.py  application.py  db.sqlite  helper.py  index.html  main.py  new.db  pyproject.toml  requirements.txt  time.py  todo.db
migrations/versions/: a6589cd6cc3d_initial_migration.py
models/: models.py
resources/: todolist.py  user.py
static/: index.html
static/css/: style.css
templates/: base.html  index.html  results.html  template.html
templates/pages/: index.html
