[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Isaac Barrezueta", email = "barrezuetai@allegheny.edu"},
]
dependencies = [
    "Flask~=2.0",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
